Actualizacion del grafico de inicio

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </header>
     <main>
       <div class="grafico-inicio-img">
-        <img class="grafico-inicio" src="./img/grafico1.png" alt="" />
+        <img class="grafico-inicio" src="./img/grafico-dani.png" alt="" />
       </div>
       <div class="graficoInicio">
         <div class="recurrencia-ejercicio">
