--- a/mas-informacion.html
+++ b/mas-informacion.html
@@ -1,113 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYM NEW OPPORT</title>
-    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon"> 
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-<nav class="navegador">
-            <img class="navegador-img" src="./img/logo11.png" alt="">
-            <i class="icono-menu fa-solid fa-bars"></i>
-            <ul class="navegador-links">
-                <li class="links"><a href="./index.html">Inicio</a></li>
-                <li class="links"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
-                <li class="links"><a href="./mas-informacion.html">Más información</a></li>
-                <li class="links"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
-            </ul>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <nav class="navegador">
+      <img class="navegador-img" src="./img/logo11.png" alt="" />
+      <i class="icono-menu fa-solid fa-bars"></i>
+      <ul class="navegador-links">
+        <li class="links"><a href="./index.html">Inicio</a></li>
+        <li class="links">
+          <a href="./tipo-de-alimentacion.html">Tipo de alimentación</a>
+        </li>
+        <li class="links">
+          <a href="./mas-informacion.html">Más información</a>
+        </li>
+        <li class="links">
+          <a href="./tipos-de-rutinas.html">Tipos de rutinas</a>
+        </li>
+      </ul>
     </nav>
     <header>
-        <h1 class="titulo-mas-informacion">MÁS INFORMACIÓN</h1>
+      <h1 class="titulo-mas-informacion" data-aos="zoom-in-down">
+        MÁS INFORMACIÓN
+      </h1>
     </header>
     <main>
-        <div class="masInformacion">
-            <img class="img-mas-informacion" src="./img/img+info.jpg" alt="">
-            <p class="informacion-fit"> Bueno, esta parte es para que me conozcan un poquito mas, acerca de mi vida fitnes.
-            Soy jugador de rugby en el club Los Matreros, donde basicamente paso la gran parte de mi tiempo,
-            ya sea entrenando (pasando la pelota, pateando la pelota, etc), corriendo, pero mas que nada 
-            me la paso en el gimnasio, aprovechando todo el tiempo del mundo para poder entrenar bien y sentir
-            un buen estimulo en cada respectivo musculo. Actualmente estoy utilizando el metodo Heavy Duty el
-            cual siento que si sigo entrenando de la forma en la que entreno, los cambios van a llegar pronto. 
-            Aunque no descarto la posibilidad de volver al Arnold Split.
-            </p>
+      <div class="masInformacion">
+        <div class="contenedor-img-mas-informacion" data-aos="fade-right">
+          <img class="img-mas-informacion" src="./img/img+info.jpg" alt="" />
         </div>
-        <div class="metodos-cambio">
-            <div class="videoCambio">
-                <iframe class="video-cambio" width="560" height="320" src="https://www.youtube.com/embed/VV_al8nS6vY?si=ziaWuPotiTOP27_O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-            <div class="flecha">
-                <img class="img-flecha" src="./img/flecha.jpg" alt="">
-            </div>
-            <section class="metodos">
-            <h3 class="titulo-metodos">Metodos de entrenamiento utilizados por mi:</h3>
-            <h5 class="descripcion-metodos"> En el ultimo tiempo he estado implementando el metodo "Heavy Duty", siento que al estar
-                usando este metodo hace relativamente poco tiempo, obviamente no voy a sentir ni notar los
-                "respectivos cambios" que deberian aparecer. Al principio de todo, donde arranque a entrenar, 
-                fue en un gimnasio convencional, haciendo rutinas "Full Body", ya que no sabia como organizar
-                ni mi tiempo ni mis rutinas, tampoco conocia el conectarme yo con el musculo, sin saber si estaba
-                o no entrenando bien, en ese tiempo no note buenos resultados, si sentia un poco mas de fuerza para 
-                los 3 o menos dias que iba. Luego de ese periodo, deje ese gimnasio, y empece a ir al del club, 
-                interiorizandome mas en el tema gimnasio, y ahi fue donde encontre el metodo "Arnold Split", 
-                donde consegui uno de mis primeros cambios fisicos y donde me puse el foco en darle mas interes a ello.
-            </h5>
-            </section>
+        <p class="informacion-fit" data-aos="fade-down-right">
+          Bueno, esta parte es para que me conozcan un poquito mas, acerca de mi
+          vida fitnes. Soy jugador de rugby en el club Los Matreros, donde
+          basicamente paso la gran parte de mi tiempo, ya sea entrenando
+          (pasando la pelota, pateando la pelota, etc), corriendo, pero mas que
+          nada me la paso en el gimnasio, aprovechando todo el tiempo del mundo
+          para poder entrenar bien y sentir un buen estimulo en cada respectivo
+          musculo. Actualmente estoy utilizando el metodo Heavy Duty el cual
+          siento que si sigo entrenando de la forma en la que entreno, los
+          cambios van a llegar pronto. Aunque no descarto la posibilidad de
+          volver al Arnold Split.
+        </p>
+      </div>
+      <div class="metodos-cambio">
+        <div class="videoCambio" data-aos="zoom-in">
+          <iframe
+            class="video-cambio"
+            width="560"
+            height="320"
+            src="https://www.youtube.com/embed/VV_al8nS6vY?si=ziaWuPotiTOP27_O"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
         </div>
-        <div class="tipos-metodos">
-            <div class="metodos-entrenamiento">
-                <h3 class="titulo-entrenamientos">Arnold Split</h3>
-                <h4 class="descripcion-entrenamientos">
-                    El Arnold Split es una división semanal utilizada por Arnold durante su preparación 
-                    para su quinto Mr.Olympia en el año de 1974. 
-                    El principal problema con el programa original es el volumen de entrenamiento, 
-                    demasiado trabajo a una intensidad muy elevada para la mayoría de nosotros. 
-                    Consiste en entrenar 6 días a la semana. con tres rutinas diferentes. 
-                    Que son, pecho y espalda, hombro, tríceps y bíceps y pierna. 
-                    Estas rutinas se repiten dos veces en la semana.
-                </h4>
-            </div>
-            <div class="metodos-entrenamiento">
-                <h3 class="titulo-entrenamientos">Heavy Duty</h3>
-                <h4 class="descripcion-entrenamientos">
-                    El Heavy Duty, también considerado una filosofía de entrenamiento, 
-                    trata de entrenamientos de muy alta intensidad, poco volumen de sets y repeticiones, 
-                    un enfoque muy controlado no solo en las repeticiones positivas (por ejemplo, cuando haces curl de bicep, 
-                    el momento cuando estás contrayendo el músculo y subiendo la pesa hacia arriba), 
-                    sino también en las negativas (cuando estás bajando la pesa), y entrenamientos con espacios de 
-                    incluso cuatro o seis días 
-                    entre sesiones de diferentes grupos musculares.
-                </h4>
-            </div>
-            <div class="metodos-entrenamiento">
-                <h3 class="titulo-entrenamientos">Full Body</h3>
-                <h4 class="descripcion-entrenamientos">
-                    Como su nombre indica, el entrenamiento Full Body 
-                    significa que en cada sesión de entrenamiento trabajamos el cuerpo completo, 
-                    por lo que activaremos una gran cantidad de músculos. 
-                    Es una muy buena opción para entrenar en casa, 
-                    tanto si empiezas ahora a entrenar como si ya haces ejercicio de forma habitual. 
-                    Lo ideal es realizarla tres días a la semana, dejando por medio un día de descanso. 
-                    Esa es precisamente una de las ventajas de esta rutina, que, por sus características, 
-                    se puede practicar con más frecuencia que otras
-                </h4>
-            </div>
+        <div class="flecha" data-aos="zoom-in-right">
+          <img class="img-flecha" src="./img/flecha.jpg" alt="" />
         </div>
+        <section class="metodos" data-aos="zoom-out-right">
+          <h3 class="titulo-metodos">
+            Metodos de entrenamiento utilizados por mi:
+          </h3>
+          <h5 class="descripcion-metodos">
+            En el ultimo tiempo he estado implementando el metodo "Heavy Duty",
+            siento que al estar usando este metodo hace relativamente poco
+            tiempo, obviamente no voy a sentir ni notar los "respectivos
+            cambios" que deberian aparecer. Al principio de todo, donde arranque
+            a entrenar, fue en un gimnasio convencional, haciendo rutinas "Full
+            Body", ya que no sabia como organizar ni mi tiempo ni mis rutinas,
+            tampoco conocia el conectarme yo con el musculo, sin saber si estaba
+            o no entrenando bien, en ese tiempo no note buenos resultados, si
+            sentia un poco mas de fuerza para los 3 o menos dias que iba. Luego
+            de ese periodo, deje ese gimnasio, y empece a ir al del club,
+            interiorizandome mas en el tema gimnasio, y ahi fue donde encontre
+            el metodo "Arnold Split", donde consegui uno de mis primeros cambios
+            fisicos y donde me puse el foco en darle mas interes a ello.
+          </h5>
+        </section>
+      </div>
+      <div class="tipos-metodos">
+        <div class="metodos-entrenamiento" data-aos="fade-down-right">
+          <h3 class="titulo-entrenamientos">Arnold Split</h3>
+          <h4 class="descripcion-entrenamientos">
+            El Arnold Split es una división semanal utilizada por Arnold durante
+            su preparación para su quinto Mr.Olympia en el año de 1974. El
+            principal problema con el programa original es el volumen de
+            entrenamiento, demasiado trabajo a una intensidad muy elevada para
+            la mayoría de nosotros. Consiste en entrenar 6 días a la semana. con
+            tres rutinas diferentes. Que son, pecho y espalda, hombro, tríceps y
+            bíceps y pierna. Estas rutinas se repiten dos veces en la semana.
+          </h4>
+        </div>
+        <div class="metodos-entrenamiento" data-aos="fade-down-left">
+          <h3 class="titulo-entrenamientos">Heavy Duty</h3>
+          <h4 class="descripcion-entrenamientos">
+            El Heavy Duty, también considerado una filosofía de entrenamiento,
+            trata de entrenamientos de muy alta intensidad, poco volumen de sets
+            y repeticiones, un enfoque muy controlado no solo en las
+            repeticiones positivas (por ejemplo, cuando haces curl de bicep, el
+            momento cuando estás contrayendo el músculo y subiendo la pesa hacia
+            arriba), sino también en las negativas (cuando estás bajando la
+            pesa), y entrenamientos con espacios de incluso cuatro o seis días
+            entre sesiones de diferentes grupos musculares.
+          </h4>
+        </div>
+        <div class="metodos-entrenamiento" data-aos="fade-up">
+          <h3 class="titulo-entrenamientos">Full Body</h3>
+          <h4 class="descripcion-entrenamientos">
+            Como su nombre indica, el entrenamiento Full Body significa que en
+            cada sesión de entrenamiento trabajamos el cuerpo completo, por lo
+            que activaremos una gran cantidad de músculos. Es una muy buena
+            opción para entrenar en casa, tanto si empiezas ahora a entrenar
+            como si ya haces ejercicio de forma habitual. Lo ideal es realizarla
+            tres días a la semana, dejando por medio un día de descanso. Esa es
+            precisamente una de las ventajas de esta rutina, que, por sus
+            características, se puede practicar con más frecuencia que otras
+          </h4>
+        </div>
+      </div>
     </main>
     <aside>
-        <ul class="contactos-redes">
-            <li class="red-ig"><a href="https://www.instagram.com/_daniramos05/">Instagram</a></li>
-            <li class="red-face"><a href="https://www.facebook.com/profile.php?id=100001610584778">Facebook</a></li>
-            <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
-        </ul>
+      <ul class="contactos-redes">
+        <li class="red-ig">
+          <a href="https://www.instagram.com/_daniramos05/">Instagram</a>
+        </li>
+        <li class="red-face">
+          <a href="https://www.facebook.com/profile.php?id=100001610584778"
+            >Facebook</a
+          >
+        </li>
+        <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
+      </ul>
     </aside>
     <footer class="footer">
-        <p class="copyright">
-            Copyright © Dani Ramos. Todos los derechos reservados 
-        </p>
-        <img class="logo-de-abajo" src="./img/logo11.png" alt="">
+      <p class="copyright">
+        Copyright © Dani Ramos. Todos los derechos reservados
+      </p>
+      <img class="logo-de-abajo" src="./img/logo11.png" alt="" />
     </footer>
-
-</body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 2000,
+      });
+    </script>
+  </body>
 </html>
