--- a/tipos-de-rutinas.html
+++ b/tipos-de-rutinas.html
@@ -1,96 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GYM NEW OPPORT</title>
-    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon"> 
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="./img/logo11.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <nav class="navegador">
-        <img class="navegador-img" src="./img/logo11.png" alt="">
-        <i class="icono-menu fa-solid fa-bars"></i>
-        <ul class="navegador-links">
-            <li class="links"><a href="./index.html">Inicio</a></li>
-            <li class="links"><a href="./tipo-de-alimentacion.html">Tipo de alimentación</a></li>
-            <li class="links"><a href="./mas-informacion.html">Más información</a></li>
-            <li class="links"><a href="./tipos-de-rutinas.html">Tipos de rutinas</a></li>    
-        </ul>
-</nav>
+      <img class="navegador-img" src="./img/logo11.png" alt="" />
+      <i class="icono-menu fa-solid fa-bars"></i>
+      <ul class="navegador-links">
+        <li class="links"><a href="./index.html">Inicio</a></li>
+        <li class="links">
+          <a href="./tipo-de-alimentacion.html">Tipo de alimentación</a>
+        </li>
+        <li class="links">
+          <a href="./mas-informacion.html">Más información</a>
+        </li>
+        <li class="links">
+          <a href="./tipos-de-rutinas.html">Tipos de rutinas</a>
+        </li>
+      </ul>
+    </nav>
     <header>
-        <h1 class="titulo-rutinas">TIPOS DE RUTINAS</h1>
+      <h1 class="titulo-rutinas" data-aos="zoom-in-down">TIPOS DE RUTINAS</h1>
     </header>
     <main>
-        <div class="tipos-rutinas">
-            <div class="rutinas">
-                <h2 class="dias">1 DIA</h2>
-                <img class="img-rutinas" src="./img/rut1.jpg" alt="">
-                <h3 class="descripcion-rutinas">Esta rutia seria para, por asi decirlo "empezar de 0". 
-                    Sabiendo que no vas a ser muy regular en la asistencia, o si...
-                    Pero mas que nada es para ir y hacer algo, por mas pocos dias que vayas.
-                </h3>
-                <button class="boton-rutinas"> Rutina Para 1 Dia</button>
-            </div>
-            <div class="rutinas">
-                <h2 class="dias">2 DIAS</h2>
-                <img class="img-rutinas" src="./img/rut2.jpg" alt="">
-                <h3 class="descripcion-rutinas">Esta rutina es mas que nada para poder darle un poquito mas re enfoque a cada musculo.
-                    Por ahi darle una doble frecuencia a un musculo en especial.
-                    O simplemente ir y entrenar sin importar la frecuencia o que tanto tardes en hacerla.
-                </h3>
-                <button class="boton-rutinas">Rutina Para 2 Dias</button>
-            </div>
-            <div class="rutinas">
-                <h2 class="dias">3 DIAS</h2>
-                <img class="img-rutinas" src="./img/rut3.jpg" alt="">
-                <h3 class="descripcion-rutinas">Esta rutina esta ya separada por grupos musculares, ya que tenes 3 dias para
-                    las 3 partes del cuerpo, tenes dia de empuje, jalon y por ultimo todo lo que es pierna.
-                    A partir de el dia 3 separamos ya todo por grupos musculares.
-                </h3>
-                <button class="boton-rutinas">Rutina Para 3 Dias</button>
-            </div>
-            <div class="rutinas">
-                <h2 class="dias">4 DIAS</h2>
-                <img class="img-rutinas" src="./img/rut4.jpg" alt="">
-                <h3 class="descripcion-rutinas">Esta rutina es mas que nada para agregarle un dia mas para rematar todos los musculos en general,
-                    o terminar de darle un estimulo mayor a algun musculo que en si en los anteriores dias no les pudiste dar.
-                </h3>
-                <button class="boton-rutinas">Rutina Para 4 Dias</button>
-            </div>
-            <div class="rutinas">
-                <h2 class="dias">5 DIAS</h2>
-                <img class="img-rutinas" src="./img/rut5.jpg" alt="">
-                <h3 class="descripcion-rutinas">Esta rutina no termina de ser para una persona que se la pasa todo el tiempo entrenando,
-                    pero se le acerca bastante, tiene un mayor volumen que las anteriores, pero no deja de ser
-                    para personas que tengan la disposicion para hacerla.
-                </h3>
-                <button class="boton-rutinas">Rutina Para 5 Dias</button>
-            </div>
-            <div class="rutinas">
-                <h2 class="dias">6 DIAS</h2>
-                <img class="img-rutinas" src="./img/rut6.jpg" alt="">
-                <h3 class="descripcion-rutinas">Este tipo de rutina ya es para gente que por asi decirlo es mas "experta",
-                    y y esta mas acostumbrada a tener un mayor volumen de entrenamiento por semana.
-                </h3>
-                <button class="boton-rutinas">Rutina Para 6 Dias</button>
-            </div>
+      <div class="tipos-rutinas">
+        <div class="rutinas" data-aos="zoom-in-left">
+          <h2 class="dias">1 DIA</h2>
+          <img class="img-rutinas" src="./img/rut1.jpg" alt="" />
+          <h3 class="descripcion-rutinas">
+            Esta rutia seria para, por asi decirlo "empezar de 0". Sabiendo que
+            no vas a ser muy regular en la asistencia, o si... Pero mas que nada
+            es para ir y hacer algo, por mas pocos dias que vayas.
+          </h3>
+          <button class="boton-rutinas">Rutina Para 1 Dia</button>
         </div>
+        <div class="rutinas" data-aos="zoom-in-right">
+          <h2 class="dias">2 DIAS</h2>
+          <img class="img-rutinas" src="./img/rut2.jpg" alt="" />
+          <h3 class="descripcion-rutinas">
+            Esta rutina es mas que nada para poder darle un poquito mas re
+            enfoque a cada musculo. Por ahi darle una doble frecuencia a un
+            musculo en especial. O simplemente ir y entrenar sin importar la
+            frecuencia o que tanto tardes en hacerla.
+          </h3>
+          <button class="boton-rutinas">Rutina Para 2 Dias</button>
+        </div>
+        <div class="rutinas" data-aos="zoom-in-left">
+          <h2 class="dias">3 DIAS</h2>
+          <img class="img-rutinas" src="./img/rut3.jpg" alt="" />
+          <h3 class="descripcion-rutinas">
+            Esta rutina esta ya separada por grupos musculares, ya que tenes 3
+            dias para las 3 partes del cuerpo, tenes dia de empuje, jalon y por
+            ultimo todo lo que es pierna. A partir de el dia 3 separamos ya todo
+            por grupos musculares.
+          </h3>
+          <button class="boton-rutinas">Rutina Para 3 Dias</button>
+        </div>
+        <div class="rutinas" data-aos="zoom-in-right">
+          <h2 class="dias">4 DIAS</h2>
+          <img class="img-rutinas" src="./img/rut4.jpg" alt="" />
+          <h3 class="descripcion-rutinas">
+            Esta rutina es mas que nada para agregarle un dia mas para rematar
+            todos los musculos en general, o terminar de darle un estimulo mayor
+            a algun musculo que en si en los anteriores dias no les pudiste dar.
+          </h3>
+          <button class="boton-rutinas">Rutina Para 4 Dias</button>
+        </div>
+        <div class="rutinas" data-aos="zoom-in-left">
+          <h2 class="dias">5 DIAS</h2>
+          <img class="img-rutinas" src="./img/rut5.jpg" alt="" />
+          <h3 class="descripcion-rutinas">
+            Esta rutina no termina de ser para una persona que se la pasa todo
+            el tiempo entrenando, pero se le acerca bastante, tiene un mayor
+            volumen que las anteriores, pero no deja de ser para personas que
+            tengan la disposicion para hacerla.
+          </h3>
+          <button class="boton-rutinas">Rutina Para 5 Dias</button>
+        </div>
+        <div class="rutinas" data-aos="zoom-in-right">
+          <h2 class="dias">6 DIAS</h2>
+          <img class="img-rutinas" src="./img/rut6.jpg" alt="" />
+          <h3 class="descripcion-rutinas">
+            Este tipo de rutina ya es para gente que por asi decirlo es mas
+            "experta", y y esta mas acostumbrada a tener un mayor volumen de
+            entrenamiento por semana.
+          </h3>
+          <button class="boton-rutinas">Rutina Para 6 Dias</button>
+        </div>
+      </div>
     </main>
     <aside>
-        <ul class="contactos-redes">
-            <li class="red-ig"><a href="https://www.instagram.com/_daniramos05/">Instagram</a></li>
-            <li class="red-face"><a href="https://www.facebook.com/profile.php?id=100001610584778">Facebook</a></li>
-            <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
-        </ul>
+      <ul class="contactos-redes">
+        <li class="red-ig">
+          <a href="https://www.instagram.com/_daniramos05/">Instagram</a>
+        </li>
+        <li class="red-face">
+          <a href="https://www.facebook.com/profile.php?id=100001610584778"
+            >Facebook</a
+          >
+        </li>
+        <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
+      </ul>
     </aside>
     <footer class="footer">
-        <p class="copyright">
-            Copyright © Dani Ramos. Todos los derechos reservados 
-        </p>
-        <img class="logo-de-abajo" src="./img/logo11.png" alt="">
+      <p class="copyright">
+        Copyright © Dani Ramos. Todos los derechos reservados
+      </p>
+      <img class="logo-de-abajo" src="./img/logo11.png" alt="" />
     </footer>
-
-</body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000,
+      });
+    </script>
+  </body>
 </html>
