Actualizando el footer

--- a/index.html
+++ b/index.html
@@ -136,18 +136,41 @@
       </div>
     </main>
     <aside>
-      <div>
+      <div class="aside">
         <ul class="contactos-redes">
           <li class="red-ig">
+            <i
+              class="icono-instagram fa-brands fa-square-instagram"
+              data-aos="zoom-in-right"
+            ></i>
             <a href="https://www.instagram.com/_daniramos05/">Instagram</a>
           </li>
           <li class="red-face">
+            <i
+              class="icono-facebook fa-brands fa-square-facebook"
+              data-aos="zoom-in-right"
+            ></i>
             <a href="https://www.facebook.com/profile.php?id=100001610584778"
               >Facebook</a
             >
           </li>
-          <li class="red-num"><p>Numero de Telefono: +54 9 11-3917-7340</p></li>
+          <li class="red-num">
+            <i
+              class="icono-numero fa-solid fa-square-phone"
+              data-aos="zoom-in-right"
+            ></i>
+            <p>Numero de Telefono: +54 9 11-3917-7340</p>
+          </li>
         </ul>
+        <div class="ubicacion-footer">
+          <img class="img-direccion" src="./img/direccion.jpeg" alt="" />
+          <i class="icono-ubicacion fa-solid fa-location-dot"
+            ><p class="direccion">
+              B1712EFP, Cnel. Arena 3580, B1712EFP Castelar, Provincia de Buenos
+              Aires
+            </p></i
+          >
+        </div>
       </div>
     </aside>
     <footer class="footer">
